[gd_scene load_steps=3 format=3 uid="uid://d0mrfk5kto4sq"]

[ext_resource type="Script" path="res://GameScenes/HUD/StartMenu.gd" id="1_hkovo"]
[ext_resource type="Script" path="res://GameScenes/HUD/PlayerName.gd" id="2_5rtd6"]

[node name="StartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_hkovo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -104.5
offset_right = 149.5
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RichTextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Monster Treasure
 Hunter"
horizontal_alignment = 1

[node name="PlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player Name"
script = ExtResource("2_5rtd6")

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Options"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="focus_exited" from="MarginContainer/VBoxContainer/PlayerName" to="." method="nameChanged"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/PlayerName" to="." method="nameChanged"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
